full-moon/tests/cases/fail/parser/last-stmt-2/source.lua
local a = pcall(function()
	return
	return
end)